--- a/plugin.xml
+++ b/plugin.xml
@@ -53,12 +53,16 @@
         <source-file src="android/libs/armeabi/libzbarjni.so" target-dir="libs/armeabi" />
         <source-file src="android/libs/armeabi-v7a/libiconv.so" target-dir="libs/armeabi-v7a" />
         <source-file src="android/libs/armeabi-v7a/libzbarjni.so" target-dir="libs/armeabi-v7a" />
+        <source-file src="android/libs/armeabi-v7a/libcharset.so" target-dir="libs/armeabi-v7a" />
         <source-file src="android/libs/arm64-v8a/libiconv.so" target-dir="libs/arm64-v8a" />
         <source-file src="android/libs/arm64-v8a/libzbarjni.so" target-dir="libs/arm64-v8a" />
+        <source-file src="android/libs/arm64-v8a/libcharset.so" target-dir="libs/armeabi-v8a" />
         <source-file src="android/libs/x86/libiconv.so" target-dir="libs/x86" />
         <source-file src="android/libs/x86/libzbarjni.so" target-dir="libs/x86" />
+        <source-file src="android/libs/x86/libcharset.so" target-dir="libs/x86" />
         <source-file src="android/libs/x86_64/libiconv.so" target-dir="libs/x86_64" />
         <source-file src="android/libs/x86_64/libzbarjni.so" target-dir="libs/x86_64" />
+        <source-file src="android/libs/x86_64/libcharset.so" target-dir="libs/x86_64" />
         <source-file src="android/res/drawable/camera_flash.png" target-dir="res/drawable"/>
         <source-file src="android/res/drawable-hdpi/camera_flash.png" target-dir="res/drawable-hdpi"/>
         <source-file src="android/res/drawable-ldpi/camera_flash.png" target-dir="res/drawable-ldpi"/>
